# icidasset

./: .gitignore  Makefile  README.md  fission.yaml  flake.nix  icidasset.cabal  package-lock.json  package.json  package.yaml  purgecss.config.js  stack.yaml
config/: build.js  index.js  server.js  utils.js  watch.js
config/base/: evil-icons.js  frontmatter.js  layouts.js  markdown.js  parent-path.js
config/handlebars/: helpers.js  partials.js  render.js
config/metadata/: env.js  index.js  meta.js  quotes.js  webpack.js
config/sequences/: index.js  webpack.js
config/tasks/: build.js  server.js  watch.js
config/webpack/: fonts.js  images.js  index.js  javascripts.js  logs.js  stylesheets.js
nix/: shell.nix
src/: Information.yaml  Intro.md  Now.md  Social.md  meta.toml
src/Css/: index.css
src/Pages/: Books.hs  Index.hs  NotFound.hs  Projects.hs  Writings.hs
src/Writings/: building-blocks.md  functional-programming-elixir--basics.md  functional-programming-elixir--monads.md  health-fitness.md  learnings-covid19.md  minimize-flaws.md  shikensu.md  static-base.md  webnative-elm.md  workout-schedule.md
src/cached_data/: quotes.json
src/javascripts/: application.js
src/layouts/: application.ejs  application.mu  writing.mu
src/partials/: analytics.mu  favicons.mu  header.mu
src/stylesheets/: application.css
src/templates/: 404.mu  books.mu  index.mu  projects.mu  quotes.mu  writings.ejs  writings.mu
src/writings/: fitness-health-lifestyle.md  functional-programming-elixir--basics.md  health-fitness.md  (+4 more)
system/: Catalogs.hs  Main.hs
(+28 files in other folders)
