name: icidasset
version: 1.0.0

build-type: Simple
cabal-version: >= 1.10


executable build
  default-language:
    Haskell2010

  default-extensions:
    ExtendedDefaultRules
    OverloadedStrings

  hs-source-dirs:
    src,
    system

  main-is:
    Main.hs

  other-modules:
    Catalogs
    Pages.Books
    Pages.Index
    Pages.NotFound
    Pages.Projects
    Pages.Writings

  build-depends:
    aeson == 0.11.*,
    base,
    directory == 1.*,
    flow == 1.*,
    icidasset-template == 1.*,
    lucid == 2.9.*,
    shikensu == 0.1.*,
    text == 1.*,
    time == 1.6.*,
    unordered-containers == 0.2.*,
    yaml == 0.8.*

  ghc-options:
    -threaded -rtsopts -with-rtsopts=-N
